--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ workflows:
     jobs:
       - build
       - deploy-prod:
+          context: mt-context
           filters:
             branches:
               only:
