--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "npm run serve",
+    "dev": "npm run serve",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
-    "vuetify": "^1.5.13",
+    "vuetify": "^1.5.14",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.6.0",
-    "@vue/cli-plugin-eslint": "^3.6.0",
-    "@vue/cli-service": "^3.6.0",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-standard": "^3.0.5",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.6.10"
