--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.16.4",
     "vue-router": "^3.0.6",
     "vuetify": "^1.5.14",
     "vuex": "^3.1.0"
