--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-analytics": "^5.16.4",
     "vue-router": "^3.0.6",
     "vuetify": "^1.5.14",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
