--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-analytics": "^5.16.4",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.0.6",
     "vuetify": "^1.5.14",
     "vuex": "^3.1.0",
