--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
+    "chartjs-plugin-trendline": "^0.1.1",
+    "date-fns": "^1.30.1",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-analytics": "^5.16.4",
