--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "auth0-js": "^9.10.4",
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "chartjs-plugin-trendline": "^0.1.1",
     "date-fns": "^1.30.1",
+    "js-cookie": "^2.2.0",
+    "jwt-decode": "^2.2.0",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-analytics": "^5.16.4",
