--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.6.10"
+  },
+  "vue": {
+    "devServer": {
+      "disableHostCheck": true
+    }
   }
 }
