added basic meta info

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "query-string": "^6.5.0",
     "vue": "^2.6.10",
     "vue-analytics": "^5.16.4",
+    "vue-meta": "^2.0.3",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.0.6",
     "vuetify": "^1.5.14",
