--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "query-string": "^6.5.0",
     "sass-loader": "^9.0.2",
