--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "query-string": "^6.5.0",
     "sass-loader": "^9.0.2",
     "vue": "^2.6.10",
     "vue-analytics": "^5.16.4",
-    "vue-meta": "^2.0.3",
+    "vue-meta": "^2.0.4",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.0.6",
     "vuetify": "^1.5.16",
