--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "lint": "vue-cli-service lint",
     "lint:fix": "npm run lint -- --fix"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
